parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID ; block .
Rule 2     block -> variable_declaration_part function_declaration_part procedure_declaration_part statement_part
Rule 3     variable_declaration_part -> VAR variable_declaration_list
Rule 4     variable_declaration_part -> empty
Rule 5     variable_declaration_list -> variable_declaration_list variable_declaration ;
Rule 6     variable_declaration_list -> variable_declaration ;
Rule 7     variable_declaration -> ID_list : type
Rule 8     ID_list -> ID
Rule 9     ID_list -> ID_list , ID
Rule 10    type -> array_type
Rule 11    type -> simple_type
Rule 12    array_type -> ARRAY [ index_range ] OF simple_type
Rule 13    index_range -> CONST_INTEGER RANGE CONST_INTEGER
Rule 14    simple_type -> type_identifier
Rule 15    type_identifier -> predefined_type
Rule 16    type_identifier -> ID
Rule 17    predefined_type -> FLOAT
Rule 18    predefined_type -> BOOLEAN
Rule 19    predefined_type -> INTEGER
Rule 20    procedure_declaration_part -> procedure_declaration_part procedure_declaration ;
Rule 21    procedure_declaration_part -> empty
Rule 22    function_declaration_part -> function_declaration_part function_declaration ;
Rule 23    function_declaration_part -> empty
Rule 24    function_declaration -> FUNCTION ID ( ) : type ; block
Rule 25    function_declaration -> FUNCTION ID ( variable_declaration_list_function ) : type ; block
Rule 26    variable_declaration_list_function -> variable_declaration_list_function ; variable_declaration
Rule 27    variable_declaration_list_function -> variable_declaration
Rule 28    procedure_declaration -> PROCEDURE ID ; block
Rule 29    statement_part -> compound_statement
Rule 30    compound_statement -> BEGIN statement_list END
Rule 31    statement_list -> statement_list ; statement
Rule 32    statement_list -> statement
Rule 33    statement -> structured_statement
Rule 34    statement -> simple_statement
Rule 35    simple_statement -> write_statement
Rule 36    simple_statement -> read_statement
Rule 37    simple_statement -> procedure_statement
Rule 38    simple_statement -> assignment_statement
Rule 39    assignment_statement -> variable ASSIGN expression
Rule 40    procedure_statement -> ID
Rule 41    read_statement -> READ ( variable_list )
Rule 42    variable_list -> variable_list , variable
Rule 43    variable_list -> variable
Rule 44    write_statement -> WRITE ( expression_list )
Rule 45    expression_list -> expression_list , expression
Rule 46    expression_list -> expression
Rule 47    structured_statement -> while_statement
Rule 48    structured_statement -> if_else_statement
Rule 49    structured_statement -> if_statement
Rule 50    structured_statement -> statement_part
Rule 51    if_statement -> IF expression THEN statement
Rule 52    if_else_statement -> IF expression THEN statement ELSE statement
Rule 53    while_statement -> WHILE expression DO statement
Rule 54    expression -> simple_expression relational_operator simple_expression
Rule 55    expression -> simple_expression
Rule 56    simple_expression -> simple_expression adding_operator term
Rule 57    simple_expression -> sign term
Rule 58    simple_expression -> term
Rule 59    term -> term multiplying_operator factor
Rule 60    term -> factor
Rule 61    factor -> NOT factor
Rule 62    factor -> ( expression )
Rule 63    factor -> constant
Rule 64    factor -> variable
Rule 65    factor -> ID ( expression_list )
Rule 66    relational_operator -> GE
Rule 67    relational_operator -> GT
Rule 68    relational_operator -> LE
Rule 69    relational_operator -> LT
Rule 70    relational_operator -> NE
Rule 71    relational_operator -> EQ
Rule 72    sign -> MINUS
Rule 73    sign -> PLUS
Rule 74    adding_operator -> OR
Rule 75    adding_operator -> MINUS
Rule 76    adding_operator -> PLUS
Rule 77    multiplying_operator -> AND
Rule 78    multiplying_operator -> DIV
Rule 79    multiplying_operator -> DIVIDE
Rule 80    multiplying_operator -> TIMES
Rule 81    variable -> indexed_variable
Rule 82    variable -> ID
Rule 83    indexed_variable -> ID [ expression ]
Rule 84    constant -> CONST_BOOL
Rule 85    constant -> CONST_CHARACTER
Rule 86    constant -> REAL
Rule 87    constant -> CONST_INTEGER
Rule 88    empty -> <empty>

Terminals, with rules where they appear:

(                    : 24 25 41 44 62 65
)                    : 24 25 41 44 62 65
,                    : 9 42 45
.                    : 1
:                    : 7 24 25
;                    : 1 5 6 20 22 24 25 26 28 31
AND                  : 77
ARRAY                : 12
ASSIGN               : 39
BEGIN                : 30
BOOLEAN              : 18
CONST_BOOL           : 84
CONST_CHARACTER      : 85
CONST_INTEGER        : 13 13 87
DIV                  : 78
DIVIDE               : 79
DO                   : 53
ELSE                 : 52
END                  : 30
EQ                   : 71
FLOAT                : 17
FUNCTION             : 24 25
GE                   : 66
GT                   : 67
ID                   : 1 8 9 16 24 25 28 40 65 82 83
IF                   : 51 52
INTEGER              : 19
LE                   : 68
LT                   : 69
MINUS                : 72 75
NE                   : 70
NOT                  : 61
OF                   : 12
OR                   : 74
PLUS                 : 73 76
PROCEDURE            : 28
PROGRAM              : 1
RANGE                : 13
READ                 : 41
REAL                 : 86
THEN                 : 51 52
TIMES                : 80
VAR                  : 3
WHILE                : 53
WRITE                : 44
[                    : 12 83
]                    : 12 83
error                : 

Nonterminals, with rules where they appear:

ID_list              : 7 9
adding_operator      : 56
array_type           : 10
assignment_statement : 38
block                : 1 24 25 28
compound_statement   : 29
constant             : 63
empty                : 4 21 23
expression           : 39 45 46 51 52 53 62 83
expression_list      : 44 45 65
factor               : 59 60 61
function_declaration : 22
function_declaration_part : 2 22
if_else_statement    : 48
if_statement         : 49
index_range          : 12
indexed_variable     : 81
multiplying_operator : 59
predefined_type      : 15
procedure_declaration : 20
procedure_declaration_part : 2 20
procedure_statement  : 37
program              : 0
read_statement       : 36
relational_operator  : 54
sign                 : 57
simple_expression    : 54 54 55 56
simple_statement     : 34
simple_type          : 11 12
statement            : 31 32 51 52 52 53
statement_list       : 30 31
statement_part       : 2 50
structured_statement : 33
term                 : 56 57 58 59
type                 : 7 24 25
type_identifier      : 14
variable             : 39 42 43 64
variable_declaration : 5 6 26 27
variable_declaration_list : 3 5
variable_declaration_list_function : 25 26
variable_declaration_part : 2
variable_list        : 41 42
while_statement      : 47
write_statement      : 35


state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID ; block .
    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .


state 2

    (1) program -> PROGRAM . ID ; block .
    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . ; block .
    ;               shift and go to state 4


state 4

    (1) program -> PROGRAM ID ; . block .
    (2) block -> . variable_declaration_part function_declaration_part procedure_declaration_part statement_part
    (3) variable_declaration_part -> . VAR variable_declaration_list
    (4) variable_declaration_part -> . empty
    (88) empty -> .
    VAR             shift and go to state 7
    FUNCTION        reduce using rule 88 (empty -> .)
    PROCEDURE       reduce using rule 88 (empty -> .)
    BEGIN           reduce using rule 88 (empty -> .)

    block                          shift and go to state 5
    variable_declaration_part      shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) program -> PROGRAM ID ; block . .
    .               shift and go to state 9


state 6

    (2) block -> variable_declaration_part . function_declaration_part procedure_declaration_part statement_part
    (22) function_declaration_part -> . function_declaration_part function_declaration ;
    (23) function_declaration_part -> . empty
    (88) empty -> .
    FUNCTION        reduce using rule 88 (empty -> .)
    PROCEDURE       reduce using rule 88 (empty -> .)
    BEGIN           reduce using rule 88 (empty -> .)

    function_declaration_part      shift and go to state 10
    empty                          shift and go to state 11

state 7

    (3) variable_declaration_part -> VAR . variable_declaration_list
    (5) variable_declaration_list -> . variable_declaration_list variable_declaration ;
    (6) variable_declaration_list -> . variable_declaration ;
    (7) variable_declaration -> . ID_list : type
    (8) ID_list -> . ID
    (9) ID_list -> . ID_list , ID
    ID              shift and go to state 15

    variable_declaration_list      shift and go to state 12
    variable_declaration           shift and go to state 13
    ID_list                        shift and go to state 14

state 8

    (4) variable_declaration_part -> empty .
    FUNCTION        reduce using rule 4 (variable_declaration_part -> empty .)
    PROCEDURE       reduce using rule 4 (variable_declaration_part -> empty .)
    BEGIN           reduce using rule 4 (variable_declaration_part -> empty .)


state 9

    (1) program -> PROGRAM ID ; block . .
    $end            reduce using rule 1 (program -> PROGRAM ID ; block . .)


state 10

    (2) block -> variable_declaration_part function_declaration_part . procedure_declaration_part statement_part
    (22) function_declaration_part -> function_declaration_part . function_declaration ;
    (20) procedure_declaration_part -> . procedure_declaration_part procedure_declaration ;
    (21) procedure_declaration_part -> . empty
    (24) function_declaration -> . FUNCTION ID ( ) : type ; block
    (25) function_declaration -> . FUNCTION ID ( variable_declaration_list_function ) : type ; block
    (88) empty -> .
    FUNCTION        shift and go to state 19
    PROCEDURE       reduce using rule 88 (empty -> .)
    BEGIN           reduce using rule 88 (empty -> .)

    procedure_declaration_part     shift and go to state 16
    function_declaration           shift and go to state 17
    empty                          shift and go to state 18

state 11

    (23) function_declaration_part -> empty .
    FUNCTION        reduce using rule 23 (function_declaration_part -> empty .)
    PROCEDURE       reduce using rule 23 (function_declaration_part -> empty .)
    BEGIN           reduce using rule 23 (function_declaration_part -> empty .)


state 12

    (3) variable_declaration_part -> VAR variable_declaration_list .
    (5) variable_declaration_list -> variable_declaration_list . variable_declaration ;
    (7) variable_declaration -> . ID_list : type
    (8) ID_list -> . ID
    (9) ID_list -> . ID_list , ID
    FUNCTION        reduce using rule 3 (variable_declaration_part -> VAR variable_declaration_list .)
    PROCEDURE       reduce using rule 3 (variable_declaration_part -> VAR variable_declaration_list .)
    BEGIN           reduce using rule 3 (variable_declaration_part -> VAR variable_declaration_list .)
    ID              shift and go to state 15

    variable_declaration           shift and go to state 20
    ID_list                        shift and go to state 14

state 13

    (6) variable_declaration_list -> variable_declaration . ;
    ;               shift and go to state 21


state 14

    (7) variable_declaration -> ID_list . : type
    (9) ID_list -> ID_list . , ID
    :               shift and go to state 22
    ,               shift and go to state 23


state 15

    (8) ID_list -> ID .
    :               reduce using rule 8 (ID_list -> ID .)
    ,               reduce using rule 8 (ID_list -> ID .)


state 16

    (2) block -> variable_declaration_part function_declaration_part procedure_declaration_part . statement_part
    (20) procedure_declaration_part -> procedure_declaration_part . procedure_declaration ;
    (29) statement_part -> . compound_statement
    (28) procedure_declaration -> . PROCEDURE ID ; block
    (30) compound_statement -> . BEGIN statement_list END
    PROCEDURE       shift and go to state 27
    BEGIN           shift and go to state 28

    statement_part                 shift and go to state 24
    procedure_declaration          shift and go to state 25
    compound_statement             shift and go to state 26

state 17

    (22) function_declaration_part -> function_declaration_part function_declaration . ;
    ;               shift and go to state 29


state 18

    (21) procedure_declaration_part -> empty .
    PROCEDURE       reduce using rule 21 (procedure_declaration_part -> empty .)
    BEGIN           reduce using rule 21 (procedure_declaration_part -> empty .)


state 19

    (24) function_declaration -> FUNCTION . ID ( ) : type ; block
    (25) function_declaration -> FUNCTION . ID ( variable_declaration_list_function ) : type ; block
    ID              shift and go to state 30


state 20

    (5) variable_declaration_list -> variable_declaration_list variable_declaration . ;
    ;               shift and go to state 31


state 21

    (6) variable_declaration_list -> variable_declaration ; .
    ID              reduce using rule 6 (variable_declaration_list -> variable_declaration ; .)
    FUNCTION        reduce using rule 6 (variable_declaration_list -> variable_declaration ; .)
    PROCEDURE       reduce using rule 6 (variable_declaration_list -> variable_declaration ; .)
    BEGIN           reduce using rule 6 (variable_declaration_list -> variable_declaration ; .)


state 22

    (7) variable_declaration -> ID_list : . type
    (10) type -> . array_type
    (11) type -> . simple_type
    (12) array_type -> . ARRAY [ index_range ] OF simple_type
    (14) simple_type -> . type_identifier
    (15) type_identifier -> . predefined_type
    (16) type_identifier -> . ID
    (17) predefined_type -> . FLOAT
    (18) predefined_type -> . BOOLEAN
    (19) predefined_type -> . INTEGER
    ARRAY           shift and go to state 35
    ID              shift and go to state 38
    FLOAT           shift and go to state 39
    BOOLEAN         shift and go to state 40
    INTEGER         shift and go to state 41

    type                           shift and go to state 32
    array_type                     shift and go to state 33
    simple_type                    shift and go to state 34
    type_identifier                shift and go to state 36
    predefined_type                shift and go to state 37

state 23

    (9) ID_list -> ID_list , . ID
    ID              shift and go to state 42


state 24

    (2) block -> variable_declaration_part function_declaration_part procedure_declaration_part statement_part .
    .               reduce using rule 2 (block -> variable_declaration_part function_declaration_part procedure_declaration_part statement_part .)
    ;               reduce using rule 2 (block -> variable_declaration_part function_declaration_part procedure_declaration_part statement_part .)


state 25

    (20) procedure_declaration_part -> procedure_declaration_part procedure_declaration . ;
    ;               shift and go to state 43


state 26

    (29) statement_part -> compound_statement .
    .               reduce using rule 29 (statement_part -> compound_statement .)
    ;               reduce using rule 29 (statement_part -> compound_statement .)
    END             reduce using rule 29 (statement_part -> compound_statement .)
    ELSE            reduce using rule 29 (statement_part -> compound_statement .)


state 27

    (28) procedure_declaration -> PROCEDURE . ID ; block
    ID              shift and go to state 44


state 28

    (30) compound_statement -> BEGIN . statement_list END
    (31) statement_list -> . statement_list ; statement
    (32) statement_list -> . statement
    (33) statement -> . structured_statement
    (34) statement -> . simple_statement
    (47) structured_statement -> . while_statement
    (48) structured_statement -> . if_else_statement
    (49) structured_statement -> . if_statement
    (50) structured_statement -> . statement_part
    (35) simple_statement -> . write_statement
    (36) simple_statement -> . read_statement
    (37) simple_statement -> . procedure_statement
    (38) simple_statement -> . assignment_statement
    (53) while_statement -> . WHILE expression DO statement
    (52) if_else_statement -> . IF expression THEN statement ELSE statement
    (51) if_statement -> . IF expression THEN statement
    (29) statement_part -> . compound_statement
    (44) write_statement -> . WRITE ( expression_list )
    (41) read_statement -> . READ ( variable_list )
    (40) procedure_statement -> . ID
    (39) assignment_statement -> . variable ASSIGN expression
    (30) compound_statement -> . BEGIN statement_list END
    (81) variable -> . indexed_variable
    (82) variable -> . ID
    (83) indexed_variable -> . ID [ expression ]
    WHILE           shift and go to state 57
    IF              shift and go to state 58
    WRITE           shift and go to state 59
    READ            shift and go to state 60
    ID              shift and go to state 61
    BEGIN           shift and go to state 28

    statement_list                 shift and go to state 45
    statement                      shift and go to state 46
    structured_statement           shift and go to state 47
    simple_statement               shift and go to state 48
    while_statement                shift and go to state 49
    if_else_statement              shift and go to state 50
    if_statement                   shift and go to state 51
    statement_part                 shift and go to state 52
    write_statement                shift and go to state 53
    read_statement                 shift and go to state 54
    procedure_statement            shift and go to state 55
    assignment_statement           shift and go to state 56
    compound_statement             shift and go to state 26
    variable                       shift and go to state 62
    indexed_variable               shift and go to state 63

state 29

    (22) function_declaration_part -> function_declaration_part function_declaration ; .
    FUNCTION        reduce using rule 22 (function_declaration_part -> function_declaration_part function_declaration ; .)
    PROCEDURE       reduce using rule 22 (function_declaration_part -> function_declaration_part function_declaration ; .)
    BEGIN           reduce using rule 22 (function_declaration_part -> function_declaration_part function_declaration ; .)


state 30

    (24) function_declaration -> FUNCTION ID . ( ) : type ; block
    (25) function_declaration -> FUNCTION ID . ( variable_declaration_list_function ) : type ; block
    (               shift and go to state 64


state 31

    (5) variable_declaration_list -> variable_declaration_list variable_declaration ; .
    ID              reduce using rule 5 (variable_declaration_list -> variable_declaration_list variable_declaration ; .)
    FUNCTION        reduce using rule 5 (variable_declaration_list -> variable_declaration_list variable_declaration ; .)
    PROCEDURE       reduce using rule 5 (variable_declaration_list -> variable_declaration_list variable_declaration ; .)
    BEGIN           reduce using rule 5 (variable_declaration_list -> variable_declaration_list variable_declaration ; .)


state 32

    (7) variable_declaration -> ID_list : type .
    ;               reduce using rule 7 (variable_declaration -> ID_list : type .)
    )               reduce using rule 7 (variable_declaration -> ID_list : type .)


state 33

    (10) type -> array_type .
    ;               reduce using rule 10 (type -> array_type .)
    )               reduce using rule 10 (type -> array_type .)


state 34

    (11) type -> simple_type .
    ;               reduce using rule 11 (type -> simple_type .)
    )               reduce using rule 11 (type -> simple_type .)


state 35

    (12) array_type -> ARRAY . [ index_range ] OF simple_type
    [               shift and go to state 65


state 36

    (14) simple_type -> type_identifier .
    ;               reduce using rule 14 (simple_type -> type_identifier .)
    )               reduce using rule 14 (simple_type -> type_identifier .)


state 37

    (15) type_identifier -> predefined_type .
    ;               reduce using rule 15 (type_identifier -> predefined_type .)
    )               reduce using rule 15 (type_identifier -> predefined_type .)


state 38

    (16) type_identifier -> ID .
    ;               reduce using rule 16 (type_identifier -> ID .)
    )               reduce using rule 16 (type_identifier -> ID .)


state 39

    (17) predefined_type -> FLOAT .
    ;               reduce using rule 17 (predefined_type -> FLOAT .)
    )               reduce using rule 17 (predefined_type -> FLOAT .)


state 40

    (18) predefined_type -> BOOLEAN .
    ;               reduce using rule 18 (predefined_type -> BOOLEAN .)
    )               reduce using rule 18 (predefined_type -> BOOLEAN .)


state 41

    (19) predefined_type -> INTEGER .
    ;               reduce using rule 19 (predefined_type -> INTEGER .)
    )               reduce using rule 19 (predefined_type -> INTEGER .)


state 42

    (9) ID_list -> ID_list , ID .
    :               reduce using rule 9 (ID_list -> ID_list , ID .)
    ,               reduce using rule 9 (ID_list -> ID_list , ID .)


state 43

    (20) procedure_declaration_part -> procedure_declaration_part procedure_declaration ; .
    PROCEDURE       reduce using rule 20 (procedure_declaration_part -> procedure_declaration_part procedure_declaration ; .)
    BEGIN           reduce using rule 20 (procedure_declaration_part -> procedure_declaration_part procedure_declaration ; .)


state 44

    (28) procedure_declaration -> PROCEDURE ID . ; block
    ;               shift and go to state 66


state 45

    (30) compound_statement -> BEGIN statement_list . END
    (31) statement_list -> statement_list . ; statement
    END             shift and go to state 67
    ;               shift and go to state 68


state 46

    (32) statement_list -> statement .
    END             reduce using rule 32 (statement_list -> statement .)
    ;               reduce using rule 32 (statement_list -> statement .)


state 47

    (33) statement -> structured_statement .
    END             reduce using rule 33 (statement -> structured_statement .)
    ;               reduce using rule 33 (statement -> structured_statement .)
    ELSE            reduce using rule 33 (statement -> structured_statement .)


state 48

    (34) statement -> simple_statement .
    END             reduce using rule 34 (statement -> simple_statement .)
    ;               reduce using rule 34 (statement -> simple_statement .)
    ELSE            reduce using rule 34 (statement -> simple_statement .)


state 49

    (47) structured_statement -> while_statement .
    END             reduce using rule 47 (structured_statement -> while_statement .)
    ;               reduce using rule 47 (structured_statement -> while_statement .)
    ELSE            reduce using rule 47 (structured_statement -> while_statement .)


state 50

    (48) structured_statement -> if_else_statement .
    END             reduce using rule 48 (structured_statement -> if_else_statement .)
    ;               reduce using rule 48 (structured_statement -> if_else_statement .)
    ELSE            reduce using rule 48 (structured_statement -> if_else_statement .)


state 51

    (49) structured_statement -> if_statement .
    END             reduce using rule 49 (structured_statement -> if_statement .)
    ;               reduce using rule 49 (structured_statement -> if_statement .)
    ELSE            reduce using rule 49 (structured_statement -> if_statement .)


state 52

    (50) structured_statement -> statement_part .
    END             reduce using rule 50 (structured_statement -> statement_part .)
    ;               reduce using rule 50 (structured_statement -> statement_part .)
    ELSE            reduce using rule 50 (structured_statement -> statement_part .)


state 53

    (35) simple_statement -> write_statement .
    END             reduce using rule 35 (simple_statement -> write_statement .)
    ;               reduce using rule 35 (simple_statement -> write_statement .)
    ELSE            reduce using rule 35 (simple_statement -> write_statement .)


state 54

    (36) simple_statement -> read_statement .
    END             reduce using rule 36 (simple_statement -> read_statement .)
    ;               reduce using rule 36 (simple_statement -> read_statement .)
    ELSE            reduce using rule 36 (simple_statement -> read_statement .)


state 55

    (37) simple_statement -> procedure_statement .
    END             reduce using rule 37 (simple_statement -> procedure_statement .)
    ;               reduce using rule 37 (simple_statement -> procedure_statement .)
    ELSE            reduce using rule 37 (simple_statement -> procedure_statement .)


state 56

    (38) simple_statement -> assignment_statement .
    END             reduce using rule 38 (simple_statement -> assignment_statement .)
    ;               reduce using rule 38 (simple_statement -> assignment_statement .)
    ELSE            reduce using rule 38 (simple_statement -> assignment_statement .)


state 57

    (53) while_statement -> WHILE . expression DO statement
    (54) expression -> . simple_expression relational_operator simple_expression
    (55) expression -> . simple_expression
    (56) simple_expression -> . simple_expression adding_operator term
    (57) simple_expression -> . sign term
    (58) simple_expression -> . term
    (72) sign -> . MINUS
    (73) sign -> . PLUS
    (59) term -> . term multiplying_operator factor
    (60) term -> . factor
    (61) factor -> . NOT factor
    (62) factor -> . ( expression )
    (63) factor -> . constant
    (64) factor -> . variable
    (65) factor -> . ID ( expression_list )
    (84) constant -> . CONST_BOOL
    (85) constant -> . CONST_CHARACTER
    (86) constant -> . REAL
    (87) constant -> . CONST_INTEGER
    (81) variable -> . indexed_variable
    (82) variable -> . ID
    (83) indexed_variable -> . ID [ expression ]
    MINUS           shift and go to state 73
    PLUS            shift and go to state 74
    NOT             shift and go to state 76
    (               shift and go to state 77
    ID              shift and go to state 80
    CONST_BOOL      shift and go to state 81
    CONST_CHARACTER shift and go to state 82
    REAL            shift and go to state 83
    CONST_INTEGER   shift and go to state 84

    expression                     shift and go to state 69
    simple_expression              shift and go to state 70
    term                           shift and go to state 71
    sign                           shift and go to state 72
    factor                         shift and go to state 75
    constant                       shift and go to state 78
    variable                       shift and go to state 79
    indexed_variable               shift and go to state 63

state 58

    (52) if_else_statement -> IF . expression THEN statement ELSE statement
    (51) if_statement -> IF . expression THEN statement
    (54) expression -> . simple_expression relational_operator simple_expression
    (55) expression -> . simple_expression
    (56) simple_expression -> . simple_expression adding_operator term
    (57) simple_expression -> . sign term
    (58) simple_expression -> . term
    (72) sign -> . MINUS
    (73) sign -> . PLUS
    (59) term -> . term multiplying_operator factor
    (60) term -> . factor
    (61) factor -> . NOT factor
    (62) factor -> . ( expression )
    (63) factor -> . constant
    (64) factor -> . variable
    (65) factor -> . ID ( expression_list )
    (84) constant -> . CONST_BOOL
    (85) constant -> . CONST_CHARACTER
    (86) constant -> . REAL
    (87) constant -> . CONST_INTEGER
    (81) variable -> . indexed_variable
    (82) variable -> . ID
    (83) indexed_variable -> . ID [ expression ]
    MINUS           shift and go to state 73
    PLUS            shift and go to state 74
    NOT             shift and go to state 76
    (               shift and go to state 77
    ID              shift and go to state 80
    CONST_BOOL      shift and go to state 81
    CONST_CHARACTER shift and go to state 82
    REAL            shift and go to state 83
    CONST_INTEGER   shift and go to state 84

    expression                     shift and go to state 85
    simple_expression              shift and go to state 70
    term                           shift and go to state 71
    sign                           shift and go to state 72
    factor                         shift and go to state 75
    constant                       shift and go to state 78
    variable                       shift and go to state 79
    indexed_variable               shift and go to state 63

state 59

    (44) write_statement -> WRITE . ( expression_list )
    (               shift and go to state 86


state 60

    (41) read_statement -> READ . ( variable_list )
    (               shift and go to state 87


state 61

    (40) procedure_statement -> ID .
    (82) variable -> ID .
    (83) indexed_variable -> ID . [ expression ]
    END             reduce using rule 40 (procedure_statement -> ID .)
    ;               reduce using rule 40 (procedure_statement -> ID .)
    ELSE            reduce using rule 40 (procedure_statement -> ID .)
    ASSIGN          reduce using rule 82 (variable -> ID .)
    [               shift and go to state 88


state 62

    (39) assignment_statement -> variable . ASSIGN expression
    ASSIGN          shift and go to state 89


state 63

    (81) variable -> indexed_variable .
    ASSIGN          reduce using rule 81 (variable -> indexed_variable .)
    AND             reduce using rule 81 (variable -> indexed_variable .)
    DIV             reduce using rule 81 (variable -> indexed_variable .)
    DIVIDE          reduce using rule 81 (variable -> indexed_variable .)
    TIMES           reduce using rule 81 (variable -> indexed_variable .)
    GE              reduce using rule 81 (variable -> indexed_variable .)
    GT              reduce using rule 81 (variable -> indexed_variable .)
    LE              reduce using rule 81 (variable -> indexed_variable .)
    LT              reduce using rule 81 (variable -> indexed_variable .)
    NE              reduce using rule 81 (variable -> indexed_variable .)
    EQ              reduce using rule 81 (variable -> indexed_variable .)
    OR              reduce using rule 81 (variable -> indexed_variable .)
    MINUS           reduce using rule 81 (variable -> indexed_variable .)
    PLUS            reduce using rule 81 (variable -> indexed_variable .)
    DO              reduce using rule 81 (variable -> indexed_variable .)
    THEN            reduce using rule 81 (variable -> indexed_variable .)
    )               reduce using rule 81 (variable -> indexed_variable .)
    ,               reduce using rule 81 (variable -> indexed_variable .)
    ]               reduce using rule 81 (variable -> indexed_variable .)
    END             reduce using rule 81 (variable -> indexed_variable .)
    ;               reduce using rule 81 (variable -> indexed_variable .)
    ELSE            reduce using rule 81 (variable -> indexed_variable .)


state 64

    (24) function_declaration -> FUNCTION ID ( . ) : type ; block
    (25) function_declaration -> FUNCTION ID ( . variable_declaration_list_function ) : type ; block
    (26) variable_declaration_list_function -> . variable_declaration_list_function ; variable_declaration
    (27) variable_declaration_list_function -> . variable_declaration
    (7) variable_declaration -> . ID_list : type
    (8) ID_list -> . ID
    (9) ID_list -> . ID_list , ID
    )               shift and go to state 90
    ID              shift and go to state 15

    variable_declaration_list_function shift and go to state 91
    variable_declaration           shift and go to state 92
    ID_list                        shift and go to state 14

state 65

    (12) array_type -> ARRAY [ . index_range ] OF simple_type
    (13) index_range -> . CONST_INTEGER RANGE CONST_INTEGER
    CONST_INTEGER   shift and go to state 94

    index_range                    shift and go to state 93

state 66

    (28) procedure_declaration -> PROCEDURE ID ; . block
    (2) block -> . variable_declaration_part function_declaration_part procedure_declaration_part statement_part
    (3) variable_declaration_part -> . VAR variable_declaration_list
    (4) variable_declaration_part -> . empty
    (88) empty -> .
    VAR             shift and go to state 7
    FUNCTION        reduce using rule 88 (empty -> .)
    PROCEDURE       reduce using rule 88 (empty -> .)
    BEGIN           reduce using rule 88 (empty -> .)

    block                          shift and go to state 95
    variable_declaration_part      shift and go to state 6
    empty                          shift and go to state 8

state 67

    (30) compound_statement -> BEGIN statement_list END .
    .               reduce using rule 30 (compound_statement -> BEGIN statement_list END .)
    ;               reduce using rule 30 (compound_statement -> BEGIN statement_list END .)
    END             reduce using rule 30 (compound_statement -> BEGIN statement_list END .)
    ELSE            reduce using rule 30 (compound_statement -> BEGIN statement_list END .)


state 68

    (31) statement_list -> statement_list ; . statement
    (33) statement -> . structured_statement
    (34) statement -> . simple_statement
    (47) structured_statement -> . while_statement
    (48) structured_statement -> . if_else_statement
    (49) structured_statement -> . if_statement
    (50) structured_statement -> . statement_part
    (35) simple_statement -> . write_statement
    (36) simple_statement -> . read_statement
    (37) simple_statement -> . procedure_statement
    (38) simple_statement -> . assignment_statement
    (53) while_statement -> . WHILE expression DO statement
    (52) if_else_statement -> . IF expression THEN statement ELSE statement
    (51) if_statement -> . IF expression THEN statement
    (29) statement_part -> . compound_statement
    (44) write_statement -> . WRITE ( expression_list )
    (41) read_statement -> . READ ( variable_list )
    (40) procedure_statement -> . ID
    (39) assignment_statement -> . variable ASSIGN expression
    (30) compound_statement -> . BEGIN statement_list END
    (81) variable -> . indexed_variable
    (82) variable -> . ID
    (83) indexed_variable -> . ID [ expression ]
    WHILE           shift and go to state 57
    IF              shift and go to state 58
    WRITE           shift and go to state 59
    READ            shift and go to state 60
    ID              shift and go to state 61
    BEGIN           shift and go to state 28

    statement                      shift and go to state 96
    structured_statement           shift and go to state 47
    simple_statement               shift and go to state 48
    while_statement                shift and go to state 49
    if_else_statement              shift and go to state 50
    if_statement                   shift and go to state 51
    statement_part                 shift and go to state 52
    write_statement                shift and go to state 53
    read_statement                 shift and go to state 54
    procedure_statement            shift and go to state 55
    assignment_statement           shift and go to state 56
    compound_statement             shift and go to state 26
    variable                       shift and go to state 62
    indexed_variable               shift and go to state 63

state 69

    (53) while_statement -> WHILE expression . DO statement
    DO              shift and go to state 97


state 70

    (54) expression -> simple_expression . relational_operator simple_expression
    (55) expression -> simple_expression .
    (56) simple_expression -> simple_expression . adding_operator term
    (66) relational_operator -> . GE
    (67) relational_operator -> . GT
    (68) relational_operator -> . LE
    (69) relational_operator -> . LT
    (70) relational_operator -> . NE
    (71) relational_operator -> . EQ
    (74) adding_operator -> . OR
    (75) adding_operator -> . MINUS
    (76) adding_operator -> . PLUS
    DO              reduce using rule 55 (expression -> simple_expression .)
    THEN            reduce using rule 55 (expression -> simple_expression .)
    )               reduce using rule 55 (expression -> simple_expression .)
    ,               reduce using rule 55 (expression -> simple_expression .)
    ]               reduce using rule 55 (expression -> simple_expression .)
    END             reduce using rule 55 (expression -> simple_expression .)
    ;               reduce using rule 55 (expression -> simple_expression .)
    ELSE            reduce using rule 55 (expression -> simple_expression .)
    GE              shift and go to state 100
    GT              shift and go to state 101
    LE              shift and go to state 102
    LT              shift and go to state 103
    NE              shift and go to state 104
    EQ              shift and go to state 105
    OR              shift and go to state 106
    MINUS           shift and go to state 107
    PLUS            shift and go to state 108

    relational_operator            shift and go to state 98
    adding_operator                shift and go to state 99

state 71
